err/dj-scaffold.err
Listing '.'...
Listing './bin'...
Compiling './bin/dj-scaffold.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dj_scaffold'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/__init__.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/admin.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/forms.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app/management'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/management/__init__.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app/management/commands'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/management/commands/__init__.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/models.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/settings.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app/static'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app/templates'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/app/templatetags'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/templatetags/__init__.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/tests.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/urls.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/app/views.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/deploy'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/docs'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/__init__.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/manage.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/media'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings/__init__.py'...
***   File "./lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings/__init__.py", line 6
    exec 'from %s import *' % SETTINGS
                          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings/base.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings/dev.py'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/settings/production.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/static'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/static/css'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/static/img'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/static/js'...
Listing './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/templates'...
Compiling './lib/python3.5/site-packages/dj_scaffold/conf/prj/sites/urls.py'...
Listing './lib/python3.5/site-packages/dj_scaffold/management'...
Listing './lib/python3.5/site-packages/dj_scaffold/management/commands'...
Listing './lib/python3.5/site-packages/dj_scaffold-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
